--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "build": "tsc",
     "server": "nodemon ./backend/server.ts",
+    "client": "npm run dev --prefix ./frontend",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
     "start": "node ./dist/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -26,6 +28,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "concurrently": "^8.2.1",
     "nodemon": "^3.0.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
